--- a/package.json
+++ b/package.json
@@ -80,11 +80,10 @@
     "@vitest/ui": "3.1.3",
     "dts-bundle-generator": "^9.5.1",
     "eslint": "^9.26.0",
-    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsdoc": "^50.6.14",
+    "eslint-plugin-vitest": "^0.5.4",
     "glob": "^11.0.2",
     "globals": "^16.1.0",
-    "jest": "^29.7.0",
     "rollup": "^4.40.2",
     "rollup-plugin-preserve-shebang": "^1.0.1",
     "semver": "^7.7.1",
@@ -92,7 +91,6 @@
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "vitest": "3.1.3",
-    "vitest-webgl-canvas-mock": "^1.1.0",
-    "eslint-plugin-vitest": "^0.5.4"
+    "vitest-webgl-canvas-mock": "^1.1.0"
   }
 }
