--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "importHelpers": false,
     "jsx": "react",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "skipLibCheck": false,
     "strict": false,
