--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "strict": false,
     "target": "ES2019",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "types": ["node", "vitest/globals", "geojson"]
+    "types": ["node", "geojson"]
   },
   "ts-node": {
     "experimentalSpecifierResolution": "node",
