--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "vitest": "3.1.3",
-    "vitest-webgl-canvas-mock": "^1.1.0"
+    "vitest": "3.1.3"
   }
 }
