--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "generate-docs": "node ${WATCH+--watch} --no-warnings --loader ts-node/esm build/generate-docs.ts",
     "mkdocs": "docker run --rm -it -p 8000:8000 -v ${PWD}:/docs squidfunk/mkdocs-material",
     "mkdocs-build": "npm run generate-docs && docker run --rm -v ${PWD}:/docs squidfunk/mkdocs-material build --strict",
-    "test-build": "jest --selectProjects=build",
-    "test-integration": "jest --selectProjects=integration",
-    "test-unit": "jest --selectProjects=unit",
-    "jest": "jest",
-    "jest-ci": "jest --reporters=github-actions --reporters=summary",
+    "test": "vitest",
+
+    "test-unit": "vitest run --config vitest.config.unit.ts",
+    "test-unit-ci": "vitest run --config vitest.config.unit.ts --coverage",
+    "test-integration": "vitest run --config vitest.config.integration.ts",
+    "test-integration-ci": "vitest run --config vitest.config.integration.ts --coverage",
+    "test-build": "vitest run --config vitest.config.build.ts",
+    "test-build-ci": "vitest run --config vitest.config.build.ts --coverage",
+    "test-watch-roots": "vitest --config vitest.config.unit.ts --watch",
     "compile": "tsc",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
@@ -69,25 +73,23 @@
     "@stylistic/eslint-plugin-ts": "^4.2.0",
     "@types/eslint": "^9.6.1",
     "@types/geojson": "^7946.0.16",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.17",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
+    "@vitest/coverage-v8": "3.1.3",
+    "@vitest/ui": "3.1.3",
     "dts-bundle-generator": "^9.5.1",
     "eslint": "^9.26.0",
-    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jsdoc": "^50.6.14",
+    "eslint-plugin-vitest": "^0.5.4",
     "glob": "^11.0.2",
     "globals": "^16.1.0",
-    "jest": "^29.7.0",
-    "jest-canvas-mock": "^2.5.2",
-    "jest-environment-jsdom": "^29.7.0",
     "rollup": "^4.40.2",
     "rollup-plugin-preserve-shebang": "^1.0.1",
     "semver": "^7.7.1",
-    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "3.1.3"
   }
 }
