--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "rollup --configPlugin @rollup/plugin-typescript -c rollup.config.ts && cp ./src/reference/v8.json ./dist/latest.json",
+    "build": "rolldown -c rollup.config.ts && cp ./src/reference/v8.json ./dist/latest.json",
     "generate-style-spec": "node --no-warnings --loader ts-node/esm build/generate-style-spec.ts",
     "generate-typings": "dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts",
     "generate-docs": "node ${WATCH+--watch} --no-warnings --loader ts-node/esm build/generate-docs.ts",
@@ -62,8 +62,6 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-strip": "^3.0.4",
@@ -83,7 +81,7 @@
     "eslint-plugin-jsdoc": "^54.5.0",
     "glob": "^11.0.3",
     "globals": "^16.3.0",
-    "rollup": "^4.50.1",
+    "rolldown": "^1.0.0-beta.35",
     "rollup-plugin-preserve-shebang": "^1.0.1",
     "semver": "^7.7.2",
     "ts-node": "^10.9.2",
