--- a/package.json
+++ b/package.json
@@ -69,18 +69,18 @@
     "@rollup/plugin-strip": "^3.0.4",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.4",
-    "@stylistic/eslint-plugin-ts": "^4.4.1",
+    "@stylistic/eslint-plugin": "^5.2.2",
     "@types/eslint": "^9.6.1",
     "@types/geojson": "^7946.0.16",
     "@types/node": "^24.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.37.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "@vitest/coverage-v8": "3.2.4",
+    "@vitest/eslint-plugin": "^1.3.4",
     "@vitest/ui": "3.2.4",
     "dts-bundle-generator": "^9.5.1",
     "eslint": "^9.32.0",
-    "eslint-plugin-jsdoc": "^52.0.2",
-    "eslint-plugin-vitest": "^0.5.4",
+    "eslint-plugin-jsdoc": "^52.0.4",
     "glob": "^11.0.3",
     "globals": "^16.3.0",
     "rollup": "^4.46.0",
