--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
+      with: { persist-credentials: false }
     - uses: actions/setup-node@v5
       with:
         node-version-file: '.nvmrc'
