--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -50,6 +50,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v5
         with: { persist-credentials: false }
