--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -17,6 +17,8 @@ jobs:
     - uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
       with:
         node-version-file: '.nvmrc'
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
 
     - name: Install NPM packages
       run: npm ci
@@ -27,7 +29,7 @@ jobs:
         npm run generate-typings
 
     - name: Build docs
-      run: npm run mkdocs-build
+      run: npm run docs-build
       
 
     - name: Deploy
