--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "generate-style-spec": "node --no-warnings --loader ts-node/esm build/generate-style-spec.ts",
     "generate-typings": "dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts",
     "generate-docs": "node ${WATCH+--watch} --no-warnings --loader ts-node/esm build/generate-docs.ts",
-    "docs": "uvx zensical serve --dev-addr 0.0.0.0:8000",
+    "docs": "uvx zensical serve --open",
     "docs-build": "npm run generate-docs && uvx zensical build",
     "test": "vitest",
     "test-unit": "vitest run --config vitest.config.unit.ts",
