--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
       #- id: end-of-file-fixer
       - id: mixed-line-ending
         args: [ --fix=lf ]
-      #- id: trailing-whitespace
+      - id: trailing-whitespace
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.5.5
