Add OIDC permissions to publish-style-spec workflow (#1419)
* Add OIDC permissions to publish-style-spec workflow

Added permissions for OIDC in workflow configuration.

* Update .github/workflows/publish-style-spec.yml

Co-authored-by: Frank Elsinga <frank@elsinga.de>

---------

Co-authored-by: Frank Elsinga <frank@elsinga.de>

--- a/.github/workflows/publish-style-spec.yml
+++ b/.github/workflows/publish-style-spec.yml
@@ -1,5 +1,8 @@
 name: publish-style-spec
 
+permissions:
+  id-token: write  # Required for trusted publishing
+
 on:
   push:
     branches: [main]
