--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:maplibre/maplibre-gl-style-spec.git"
+    "url": "https://github.com/maplibre/maplibre-style-spec"
   },
   "bin": {
     "gl-style-migrate": "dist/gl-style-migrate.mjs",
