--- a/.github/workflows/publish-style-spec.yml
+++ b/.github/workflows/publish-style-spec.yml
@@ -1,8 +1,9 @@
-name: publish-style-spec
+name: Publish to NPM
 
 permissions:
   id-token: write  # Required for trusted publishing
   contents: write
+  attestations: write
 
 on:
   push:
@@ -10,104 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  release-check:
-    name: Check if version changed
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          fetch-depth: 0
-          ref: main
-
-      - name: Use Node.js from nvmrc
-        uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: Check if version changed
-        id: check
-        run: |
-          latestNpmPackageVersion=$( npm view @maplibre/maplibre-gl-style-spec versions --json | jq '.[-1]' -r )
-          currentVersion=$( node -e "console.log(require('./package.json').version)" )
-          if [ "$latestNpmPackageVersion" == "$currentVersion" ]; then
-            echo "changed=false" >> $GITHUB_OUTPUT
-          else
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
-
-    outputs:
-      publish: ${{ steps.check.outputs.changed }}
-
-
-  publish:
-    name: Build, publish
-    needs: release-check
-    if: ${{ needs.release-check.outputs.publish == 'true' }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          fetch-depth: 0
-          persist-credentials: false
-
-      - name: Use Node.js from nvmrc
-        uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
-        with:
-          node-version-file: '.nvmrc'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Get version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@3cf273023a0dda27efcd3164bdfb51908dd46a5b # v1.3.1
-
-      - name: Check tag does not exist yet
-        run: if git rev-list v${{ steps.package-version.outputs.current-version }}; then echo "Tag already exists. Aborting the release process."; exit 1; fi
-
-      - name: Tag commit and push
-        uses: mathieudutour/github-tag-action@a22cf08638b34d5badda920f9daf6e72c477b07b # v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: ${{ steps.package-version.outputs.current-version }}
-
-
-      - name: Install NPM packages
-        run: npm ci
-
-      - name: Prepare release
-        id: prepare_release
-        run: |
-          echo "version_tag=v${{ steps.package-version.outputs.current-version }}" >> $GITHUB_OUTPUT
-          RELEASE_TYPE=$(node -e "console.log(require('semver').prerelease('${{ steps.package-version.outputs.current-version }}') ? 'prerelease' : 'regular')")
-          echo "release_type=$RELEASE_TYPE" >> $GITHUB_OUTPUT
-
-      - name: Build style spec
-        run: |
-          npm run generate-style-spec
-          npm run generate-typings
-          npm run build
-
-      - name: Build Release Notes
-        id: release_notes
-        run: |
-          RELEASE_NOTES_PATH="${PWD}/release_notes.txt"
-          ./build/release-notes.js > ${RELEASE_NOTES_PATH}
-          echo "release_notes=${RELEASE_NOTES_PATH}" >> $GITHUB_OUTPUT
-
-      - name: Publish NPM package
-        run: |
-          npm publish --access=public
-
-      - name: Create GitHub Release
-        id: create_regular_release
-        uses: ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b # v1.20.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag: ${{ steps.prepare_release.outputs.version_tag }}
-          name: ${{steps.prepare_release.outputs.version_tag }}
-          bodyFile: ${{ steps.release_notes.outputs.release_notes }}
-          draft: false
-          prerelease: false
+  release:
+    uses: maplibre/reusable-workflows/.github/workflows/npm-publish.yml@main
+    with:
+      build-command: npm ci && npm run generate-style-spec && npm run generate-typings && npm run build
