--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "generate-style-spec": "node --no-warnings --loader ts-node/esm build/generate-style-spec.ts",
     "generate-typings": "dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts",
     "generate-docs": "node ${WATCH+--watch} --no-warnings --loader ts-node/esm build/generate-docs.ts",
-    "docs": "uvx zensical serve --open",
-    "docs-build": "npm run generate-docs && uvx zensical build",
+    "start-docs": "docker run --rm -v ${PWD}:/docs zensical/zensical serve --open",
+    "docs": "npm run generate-docs && docker run --rm -v ${PWD}:/docs zensical/zensical build",
     "test": "vitest",
     "test-unit": "vitest run --config vitest.config.unit.ts",
     "test-unit-ci": "vitest run --config vitest.config.unit.ts --coverage",
